add VV NLO samples

--- a/xsec-json.ipynb
+++ b/xsec-json.ipynb
@@ -128,6 +128,14 @@
     "xs['WZ'] = 2.756e+01\n",
     "xs['ZZ'] = 1.214e+01\n",
     "\n",
+    "xs['WWTo1L1Nu2Q'] = 5.090e+01\n",
+    "xs['WWTo4Q'] = 5.157e+01\n",
+    "xs['WZTo1L1Nu2Q'] = 9.152e+00\n",
+    "xs['WZTo2Q2L'] = 6.422e+00\n",
+    "xs['ZZTo2Q2L'] = 3.705e+00\n",
+    "xs['ZZTo2Q2Nu'] = 4.498e+00\n",
+    "xs['ZZTo4Q'] = 3.295e+00\n",
+    "\n",
     "# Higgs\n",
     "xs['GluGluHToBB'] = 4.716e-01 * BR_HBB\n",
     "xs['VBFHToBB'] = 3.873e+00 * BR_HBB\n",
@@ -154,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "b10cfd5b",
    "metadata": {},
    "outputs": [],
@@ -181,8 +189,9 @@
     "\n",
     "pmap['ttbar'] = ['TTTo2L2Nu', \n",
     "                 'TTToHadronic', \n",
-    "                 'TTToSemiLeptonic',\n",
-    "                 'TTToSemiLeptonic_ext1']\n",
+    "#                 'TTToSemiLeptonic',\n",
+    "                 'TTToSemiLeptonic_ext1'\n",
+    "                ]\n",
     "\n",
     "pmap['singlet'] = ['ST_t-channel_antitop_4f_InclusiveDecays', \n",
     "                   'ST_t-channel_top_4f_InclusiveDecays', \n",
@@ -223,6 +232,16 @@
     "                   'DYJetsToLL_HT-2500toInf']\n",
     "\n",
     "pmap['VV'] = ['WW', 'WZ', 'ZZ']\n",
+    "\n",
+    "pmap['VVNLO'] = ['WWTo1L1Nu2Q',\n",
+    "                 'WWTo4Q',\n",
+    "                 'WZ',\n",
+    "#                 'WZTo1L1Nu2Q_4f_TuneCP5_13TeV-amcatnloFXFX-pythia8',\n",
+    "#                 'WZTo2Q2L_mllmin4p0_TuneCP5_13TeV-amcatnloFXFX-pythia8',\n",
+    "                 'ZZTo2Q2L',\n",
+    "                 'ZZTo2Q2Nu',\n",
+    "                 'ZZTo4Q'\n",
+    "                ]\n",
     "\n",
     "pmap['EWKZ'] = ['EWKZ_ZToQQ', 'EWKZ_ZToLL', 'EWKZ_ZtoNuNu']\n",
     "\n",
@@ -290,6 +309,14 @@
     "with open('pmap.json', 'w') as outfile:\n",
     "    json.dump(pmap, outfile, indent=4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08aee78a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
